--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-gemini-scrollbar",
   "version": "1.0.8",
   "description": "React component for custom scrollbars with native scrolling",
-  "main": "index.jsx",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/noeldelgado/react-gemini-scrollbar.git"
